# nbody

./: Cargo.toml
assets/systems/figure8/: earth.body.ron  moon.body.ron  sun.body.ron
assets/systems/solar/: earth.body.ron  mars.body.ron  moon.body.ron  sun.body.ron
assets/systems/solar_to_scale/: earth.body.ron  mars.body.ron  moon.body.ron  sun.body.ron
assets/systems_meta/: figure8.system.ron  solar.system.ron  solar_to_scale.system.ron
src/: controls.rs  main.rs  utils.rs
src/assets/: body.rs  system.rs
src/sim/: mod.rs
src/ui/: mod.rs
