[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", features = ["file_watcher", "dynamic_linking", "wayland"] }
bevy_asset_loader = "0.21.0"
bevy_egui = "0.28.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
thiserror = "1.0.61"

